# Y3-CEP-Final-Project-Christopher-Renoir

./: .gitignore  LOGS.md  README.md  app.yaml  main.py  pyproject.toml  requirements.txt  run.cmd  run.sh  testing.toml
examples/: announcement.md
master/: __init__.py  mongosetup.py
master/bottle/: __init__.py  apiget.py  apipost.py  website.py
notes/: checklist.md  collections.md  dummy_info.md
static/css/: already-read.css  base.css  buttons.css  create-entity.css  entities.css  group-individual.css  input-field.css  login.css  navbar.css  notifications.css  paginators.css  sidebar.css
static/scripts/: base.js  mdrenderer.js  sidebar.js
templates/: 404-depression.html  announcement-individual.html  announcement-post.html  announcement-successful.html  announcements.html  base.html  group-create.html  group-individual.html  groups.html  homepage.html  login-invalid.html  login-staff.html  login-student.html  logout.html  notifications.html  template.html  user-create-staff.html  user-create-student.html
