[tool.poetry]
authors = [""]
description = "Student's gateway"
name = "studentsgatorade"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.11.0"
dnspython = "^2.0.0"
flask = "^1.1.2"
mongoengine = "^0.20.0"
waitress = "^1.4"
website = "^1.1"
pytz = "^2020.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
